--- a/.gitconfig
+++ b/.gitconfig
@@ -1,46 +1,21 @@
 [user]
     name = samudra
-    email = samudra@amazon.com
-    groups = krf-dev
+    email = sabaner@microsoft.com
 
 [color]
     ui = true
 
-# When using the post-review tool provided by Amazon Builder Tools team (in RBTools package),
-# this option automatically appends the CR url to the commit message
-[amazon]
-    append-cr-url = true
-
 [core]
     editor = vim
     pager = less -FMRiX
-    excludefile = /home/samudra/.config/git/excludes
 
-# For resolving conflicts, I have found nothing better than the p4merge visual merge tool.
-# Install it for free from perforce website and set these options.
 [push]
     default = simple
 
-[merge]
-    tool = p4merge
-    conflictstyle = diff3  # This option gives you the baseline code in the diff marks that
-                           # are added in your files during a conflict, in addition to the
-                           # usual "their" code and "mine" code. Makes conflict resolution
-                           # much easier.
 [mergetool]
     prompt = false
     keepTemporaries = false
-[mergetool "p4merge"]
-    cmd = /Applications/p4merge.app/Contents/MacOS/p4merge $BASE $LOCAL $REMOTE $MERGED
-    trustExitCode = true
 
-# Do a git log on your repo, and see how it looks. Want your log output
-# to look like this instead? 
-#
-# https://improvement-ninjas.amazon.com/s3files/s3get.cgi/git-log-pretty-aj.png
-#
-# Then set the below format.pretty option. The weird %x08 sequences are backspace
-# characters that remove part of the date.
 [format]
     pretty = %C(yellow)%h %C(cyan)%ae%x08%x08%x08%x08%x08%x08%x08%x08%x08%x08%x08%C(blue) %cd%x08%x08%x08%x08%x08%x08%C(reset)%C(magenta bold)%d%C(reset)%C(normal) %s
 
